...

    <item
        android:id="@+id/curUser"
        android:title="Username"
        />
    <item
        android:id="@+id/btnleaderboard"
        android:title="Leaderboard"
        />

    <item
        android:id="@+id/btnWebsocket"
        android:title="To Chat Room" />

    <item
        android:id="@+id/btnLobby"
        android:title="To Game Select" />

    <item
        android:id="@+id/btnSettings"
        android:title="To Shop" />
   <item

        android:id="@+id/logout"
        android:title="Logout" />

    <item
        android:id="@+id/btnAdmin"
        android:title="To Admin" />
    <item

        android:id="@+id/btnArtists"
        android:title="To Artist Changes" />


<!--    <Button-->
<!--        android:id="@+id/btnleaderboard"-->
<!--        android:layout_width="fill_parent"-->
...
