<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:background="@drawable/background_login"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

...
            android:textColor="#C8000000"
            android:textSize="40sp"
            android:inputType="text"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="367dp"
            android:layout_height="57dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="Username"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="366dp"
            android:layout_height="58dp"
            android:background="#30ffffff"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/login"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:text="Login" />


        <Button
            android:id="@+id/forgotPW"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
...
        <!--    android:layout_marginBottom="32dp"/>-->


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
